force-app/main/default/objects/Opportunity/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hoist</fullName>
            </value>
            <value>
                <fullName>Swing Stage</fullName>
            </value>
            <value>
                <fullName>Goods Lift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>