force-app/main/default/objects/Opportunity/fields/Access_Tunnels__c.field-meta.xml
<CustomField>
    <fullName>Access_Tunnels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Tunnels</label>
    <type>Checkbox</type>
</CustomField>