force-app/main/default/objects/Opportunity/fields/Amount_at_UC__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_UC__c</fullName>
    <label>Amount at UC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>