force-app/main/default/objects/Opportunity/fields/Annual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Annual_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to display Planned Work Opportunities that are included in Annual Forecasting</description>
    <label>Annual Forecast</label>
    <type>Checkbox</type>
</CustomField>