force-app/main/default/objects/Opportunity/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The architect working on the project</description>
    <label>Architect</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Architect)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>