force-app/main/default/objects/Opportunity/fields/Architect_Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>Architect_Closed_Count__c</fullName>
    <formula>Architect__r.Closed_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Closed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>