force-app/main/default/objects/Opportunity/fields/Architect_Weighted_Rel__c.field-meta.xml
<CustomField>
    <fullName>Architect_Weighted_Rel__c</fullName>
    <formula>IF(
    Architect_Weighted_Rel_Score__c &gt; 5, 
    &#39;Key Promoter&#39;, 
    IF(
        AND(Architect_Weighted_Rel_Score__c &lt;= 5, Architect_Weighted_Rel_Score__c &gt;= 3), 
        &#39;Promoter&#39;, 
        IF(
            AND(Architect_Weighted_Rel_Score__c &lt; 3, Architect_Weighted_Rel_Score__c &gt;= 0), 
            &#39;Neutral&#39;, 
            IF(
                Architect_Weighted_Rel_Score__c &lt; 0, 
                &#39;Detractor&#39;, 
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Weighted Rel</label>
    <type>Text</type>
</CustomField>