force-app/main/default/objects/Opportunity/fields/Architect_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Architect_Win_Percentage__c</fullName>
    <formula>IF(
ISBLANK(Architect__c), 0,

IF(
Architect__r.Won_Count__c = 0, 0,

(Architect__r.Won_Count__c + Architect__r.Under_Costruction_Count__c) / (Architect__r.Won_Count__c + Architect__r.Under_Costruction_Count__c +  Architect__r.Lost_Count__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Architect Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>