force-app/main/default/objects/Opportunity/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <formula>CASE( RecordType.Name , &quot;Tender&quot;,   Tender_Assessment__c  , &quot;ECI / Negotiation&quot;,   ECI_Negotiation_Assessment__c, IMAGE(&quot;/resource/1458795716000/CSAT_Dissatisfied&quot;,&quot;&quot;,22,22))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment</label>
    <type>Text</type>
</CustomField>