force-app/main/default/objects/Opportunity/fields/Assessment_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Indicator__c</fullName>
    <description>This is used for reporting &amp; list view purposes.  It looks at the Opportunity Record Type and uses the appropriate Assessment Indicator.</description>
    <formula>CASE( RecordType.Name , &quot;Tender&quot;,  Tender_Assesment_Indicator__c , &quot;ECI / Negotiation&quot;,  ECI_Negotiation_Assesment_Indicator__c ,&quot;Weak&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Indicator</label>
    <type>Text</type>
</CustomField>