force-app/main/default/objects/Opportunity/fields/Assessment_Indicator_Formula__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Indicator_Formula__c</fullName>
    <formula>IF(Assessment_Indicator__c =&quot;Weak&quot;, &quot;01 Weak&quot;,
IF(Assessment_Indicator__c = &quot;Develop&quot;, &quot;02 Develop&quot;,
IF(Assessment_Indicator__c = &quot;Strong&quot;, &quot;03 Strong&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Indicator</label>
    <type>Text</type>
</CustomField>