force-app/main/default/objects/Opportunity/fields/Available_team__c.field-meta.xml
<CustomField>
    <fullName>Available_team__c</fullName>
    <label>Available team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>