force-app/main/default/objects/Opportunity/fields/Average_Response_Pendula_del__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Pendula_del__c</fullName>
    <label>Average Response</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>