force-app/main/default/objects/Opportunity/fields/Award_Date_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Award_Date_Countdown__c</fullName>
    <formula>IF(
CloseDate &gt;= TODAY(),
IMAGE(&quot;/resource/FlagGreen&quot;, &quot;FlagGreen&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(CloseDate - TODAY()) &amp; &#39; Days&#39;,
IF(
CloseDate &lt; TODAY(),
IMAGE(&quot;/resource/FlagRed&quot;, &quot;FlagRed&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(CloseDate - TODAY()) &amp; &#39; Days&#39;, null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Date Countdown</label>
    <type>Text</type>
</CustomField>