force-app/main/default/objects/Opportunity/fields/Base_Building_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Base_Building_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Building Upgrade</label>
    <type>Checkbox</type>
</CustomField>