force-app/main/default/objects/Opportunity/fields/Basement_Carpark__c.field-meta.xml
<CustomField>
    <fullName>Basement_Carpark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basement Carpark</label>
    <type>Checkbox</type>
</CustomField>