force-app/main/default/objects/Opportunity/fields/Bathroom_Pods__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_Pods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bathroom Pods</label>
    <type>Checkbox</type>
</CustomField>