force-app/main/default/objects/Opportunity/fields/Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Best_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to display Planned Work Opportunities that are included in Best Case Forecasting</description>
    <label>Best Case</label>
    <type>Checkbox</type>
</CustomField>