force-app/main/default/objects/Opportunity/fields/BIM_project__c.field-meta.xml
<CustomField>
    <fullName>BIM_project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the project use BIM?</inlineHelpText>
    <label>BIM project</label>
    <type>Checkbox</type>
</CustomField>