force-app/main/default/objects/Opportunity/fields/Budget_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Close_Date__c</fullName>
    <label>Budget Close Date</label>
    <type>Date</type>
</CustomField>