force-app/main/default/objects/Opportunity/fields/Budget_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date__c</fullName>
    <label>Budget Start Date</label>
    <type>Date</type>
</CustomField>