force-app/main/default/objects/Opportunity/fields/Budget_Start_Date_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date_Countdown__c</fullName>
    <formula>IF(
 Budget_Start_Date__c  &gt;= TODAY(),
IMAGE(&quot;/resource/FlagGreen&quot;, &quot;FlagGreen&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(Budget_Start_Date__c  - TODAY()) &amp; &#39; Days&#39;,
IF(
Budget_Start_Date__c  &lt; TODAY(),
IMAGE(&quot;/resource/FlagRed&quot;, &quot;FlagRed&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(Budget_Start_Date__c  - TODAY()) &amp; &#39; Days&#39;, null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Start Date Countdown</label>
    <type>Text</type>
</CustomField>