force-app/main/default/objects/Opportunity/fields/Buildcorp_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Buildcorp_Business_Unit__c</fullName>
    <inlineHelpText>Select the business unit working on this opportunity

WARNING: If you do not enter this field this opportunity will not appear in your reports</inlineHelpText>
    <label>Buildcorp Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Solutions</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Interiors NSW</fullName>
            </value>
            <value>
                <fullName>Interiors QLD</fullName>
                <label>Queensland</label>
            </value>
            <value>
                <fullName>Interiors VIC</fullName>
                <label>Victoria</label>
            </value>
            <value>
                <fullName>Euroline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>