force-app/main/default/objects/Opportunity/fields/Business_Unit_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Assessment__c</fullName>
    <formula>IF(ISBLANK(Business_Unit_Score__c),  IMAGE(&quot;/resource/CircleGrey&quot;, &quot;&quot;,20,20),
IF(Business_Unit_Score__c &gt;= 35, IMAGE(&quot;/resource/Priority_4_Low&quot;, &quot;&quot;,20,20), 
IF(Business_Unit_Score__c &gt; 20 &amp;&amp; Business_Unit_Score__c &lt; 35, IMAGE(&quot;/resource/Priority_3_Medium&quot;,&quot;&quot;,20,20),
IMAGE(&quot;/resource/Priority_2_High&quot;,&quot;&quot;,20,20)
)))</formula>
    <label>Business Unit Assessment</label>
    <type>Text</type>
</CustomField>