force-app/main/default/objects/Opportunity/fields/Business_Unit_Assessment_Negative_Scores__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Assessment_Negative_Scores__c</fullName>
    <description>Updated via apex</description>
    <inlineHelpText>Business Unit Assessment questions that scored a -5 value</inlineHelpText>
    <label>Business Unit Assessment Negative Scores</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>