force-app/main/default/objects/Opportunity/fields/Business_Unit_Assessment_Positive_Scores__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Assessment_Positive_Scores__c</fullName>
    <inlineHelpText>Business Unit Assessment questions that scored a 5 value.</inlineHelpText>
    <label>Business Unit Assessment Positive Scores</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>