force-app/main/default/objects/Opportunity/fields/Business_Unit_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Score__c</fullName>
    <description>Updated via flow</description>
    <inlineHelpText>Each question can be worth between -5 and 5 points</inlineHelpText>
    <label>Business Unit Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>