force-app/main/default/objects/Opportunity/fields/Capacity_Capability_of_Team__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Capability_of_Team__c</fullName>
    <description>Capacity/capability of front end and delivery team</description>
    <inlineHelpText>Capacity/capability of front end and delivery team</inlineHelpText>
    <label>Capacity / Capability of Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capacity_Capability_of_Team</valueSetName>
    </valueSet>
</CustomField>