force-app/main/default/objects/Opportunity/fields/CL_Group_Relationship_Indiciator__c.field-meta.xml
<CustomField>
    <fullName>CL_Group_Relationship_Indiciator__c</fullName>
    <description>Group Relationship Indicator when the Opportunity Stage moves to Closed/Lost. Updated via Process Builder.</description>
    <label>CL Group Relationship Indiciator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>