force-app/main/default/objects/Opportunity/fields/CL_Relationship_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CL_Relationship_Indicator__c</fullName>
    <description>Used to capture the Relationship indicator when the Opportunity goes to Closed/Lost Stage. For reporting purposes.</description>
    <label>CL Relationship Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>