force-app/main/default/objects/Opportunity/fields/CL_Tender_Assessment_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CL_Tender_Assessment_Indicator__c</fullName>
    <description>Used to capture the Tender Assessment Indicator when the Opportunity goes to Closed/Lost Stage. For reporting purposes.</description>
    <label>CL Tender Assessment Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>