force-app/main/default/objects/Opportunity/fields/Client_BU_Rel_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_BU_Rel_Status__c</fullName>
    <formula>IF(
ISBLANK(Client__c), &quot;&quot;,

CASE(Buildcorp_Business_Unit__c, 
&quot;Interiors NSW&quot;, TEXT(Client__r.Int_NSW_Relationship__c),
&quot;Interiors QLD&quot;, TEXT(Client__r.Int_QLD_Relationship__c),
&quot;Interiors VIC&quot;, TEXT(Client__r.Int_Vic_Relationship__c),
&quot;Asset Solutions&quot;, TEXT(Client__r.Asset_Sol_Relationship__c),
&quot;Contracting&quot;, TEXT(Client__r.Contracting_Relationship__c),
&quot;&quot;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client BU Rel Status</label>
    <type>Text</type>
</CustomField>