force-app/main/default/objects/Opportunity/fields/Client_Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>Client_Closed_Count__c</fullName>
    <formula>Client__r.Closed_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Closed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>