force-app/main/default/objects/Opportunity/fields/Client_Experience__c.field-meta.xml
<CustomField>
    <fullName>Client_Experience__c</fullName>
    <label>Client Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High - educated client</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Low - 1st time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>