force-app/main/default/objects/Opportunity/fields/Client_Weighted_Rel_Formula__c.field-meta.xml
<CustomField>
    <fullName>Client_Weighted_Rel_Formula__c</fullName>
    <formula>IF(
    Client_Weighted_Rel_Score__c &gt; 5, 
    &#39;Key Promoter&#39;, 
    IF(
        AND(Client_Weighted_Rel_Score__c &lt;= 5, Client_Weighted_Rel_Score__c &gt;= 3), 
        &#39;Promoter&#39;, 
        IF(
            AND(Client_Weighted_Rel_Score__c &lt; 3, Client_Weighted_Rel_Score__c &gt;= 0), 
            &#39;Neutral&#39;, 
            IF(
                Client_Weighted_Rel_Score__c &lt; 0, 
                &#39;Detractor&#39;, 
                NULL
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Weighted Rel</label>
    <type>Text</type>
</CustomField>