force-app/main/default/objects/Opportunity/fields/Client_Weighted_Rel_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Weighted_Rel_Score__c</fullName>
    <label>Client Weighted Rel</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>