force-app/main/default/objects/Opportunity/fields/Client_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Client_Win_Percentage__c</fullName>
    <formula>IF(
ISBLANK(Client__c), 0,

IF(
  Client__r.Won_Count__c = 0, 0,

(Client__r.Won_Count__c + Client__r.Under_Costruction_Count__c) / (Client__r.Won_Count__c + Client__r.Under_Costruction_Count__c + Client__r.Lost_Count__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>