force-app/main/default/objects/Opportunity/fields/Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost__c</fullName>
    <formula>IF(NOT(ISBLANK(Closed_Lost_Date__c)),TRUE,FALSE)</formula>
    <label>Closed Lost</label>
    <type>Checkbox</type>
</CustomField>