force-app/main/default/objects/Opportunity/fields/CloseDateThisYear__c.field-meta.xml
<CustomField>
    <fullName>CloseDateThisYear__c</fullName>
    <formula>IF(YEAR(CloseDate) = YEAR(TODAY()), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseDateThisYear</label>
    <type>Checkbox</type>
</CustomField>