force-app/main/default/objects/Opportunity/fields/Community_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Community_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Engagement</label>
    <type>Checkbox</type>
</CustomField>