force-app/main/default/objects/Opportunity/fields/Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Buildcorp Business Unit working on the Project</inlineHelpText>
    <label>Competitor 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor 1)</relationshipLabel>
    <relationshipName>OpportunitiesrPUz</relationshipName>
    <type>Lookup</type>
</CustomField>