force-app/main/default/objects/Opportunity/fields/Competitor_1_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1_Win_Percentage__c</fullName>
    <formula>(Competitor_1__r.Won_Count__c + Competitor_1__r.Under_Costruction_Count__c) / (Competitor_1__r.Won_Count__c + Competitor_1__r.Under_Costruction_Count__c + Competitor_1__r.Lost_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Buildcorp Business Unit working on the Project</inlineHelpText>
    <label>Competitor 1 Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>