force-app/main/default/objects/Opportunity/fields/Competitor_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor 2)</relationshipLabel>
    <relationshipName>OpportunitiesrPVT</relationshipName>
    <type>Lookup</type>
</CustomField>