force-app/main/default/objects/Opportunity/fields/Competitor_3__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Competitor 3)</relationshipLabel>
    <relationshipName>OpportunitiesrPVi</relationshipName>
    <type>Lookup</type>
</CustomField>