force-app/main/default/objects/Opportunity/fields/Competitor_3_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Competitor_3_Win_Percentage__c</fullName>
    <formula>(Competitor_3__r.Won_Count__c + Competitor_3__r.Under_Costruction_Count__c) / (Competitor_3__r.Won_Count__c + Competitor_3__r.Under_Costruction_Count__c + Competitor_3__r.Lost_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor 3 Win %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>