force-app/main/default/objects/Opportunity/fields/Competitors_Experience__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Experience__c</fullName>
    <inlineHelpText>Please list the main competitor&#39;s experience level in this Opportuntity</inlineHelpText>
    <label>Competitors Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than Buildcorp</fullName>
            </value>
            <value>
                <fullName>Equal to Buildcorp</fullName>
            </value>
            <value>
                <fullName>More than Buildcorp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>