force-app/main/default/objects/Opportunity/fields/Construction_end_date__c.field-meta.xml
<CustomField>
    <fullName>Construction_end_date__c</fullName>
    <label>Construction end date</label>
    <type>Date</type>
</CustomField>