force-app/main/default/objects/Opportunity/fields/Construction_End_Date_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Construction_End_Date_Countdown__c</fullName>
    <formula>IF(
     Construction_end_date__c &gt;= TODAY(), 
    IMAGE(&quot;/resource/FlagGreen&quot;, &quot;FlagGreen&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(Construction_end_date__c - TODAY()) &amp; &#39; Days&#39;, 
IF(
Construction_end_date__c &lt; TODAY(),
    IMAGE(&quot;/resource/FlagRed&quot;, &quot;FlagRed&quot;, 26, 26) &amp; &#39; &#39; &amp; TEXT(Construction_end_date__c - TODAY()) &amp; &#39; Days&#39;, null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction End Date Countdown</label>
    <type>Text</type>
</CustomField>