force-app/main/default/objects/Opportunity/fields/Construction_start_date__c.field-meta.xml
<CustomField>
    <fullName>Construction_start_date__c</fullName>
    <label>Construction start date</label>
    <type>Date</type>
</CustomField>