force-app/main/default/objects/Opportunity/fields/Consultant_ECI_engagement__c.field-meta.xml
<CustomField>
    <fullName>Consultant_ECI_engagement__c</fullName>
    <label>Consultant ECI engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>