force-app/main/default/objects/Opportunity/fields/Contract_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Contract_Conditions__c</fullName>
    <description>Contract conditions and nature of ECI structure</description>
    <label>Contract Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Conditions</valueSetName>
    </valueSet>
</CustomField>