force-app/main/default/objects/Opportunity/fields/Conversion_Process__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Process__c</fullName>
    <inlineHelpText>Only change this when the process is absolutely completed</inlineHelpText>
    <label>Conversion Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>