force-app/main/default/objects/Opportunity/fields/Count_Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Count_Contact_Roles__c</fullName>
    <label>Count Contact Roles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>