force-app/main/default/objects/Opportunity/fields/Crane__c.field-meta.xml
<CustomField>
    <fullName>Crane__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crane</label>
    <type>Checkbox</type>
</CustomField>